<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/tv_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_new_password"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp" />

    <EditText
        android:id="@+id/tv_add_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:hint="@string/target_website"
        android:inputType="text" />

    <EditText
        android:id="@+id/tv_add_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/tv_add_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_pink_400"
        android:textColor="@color/material_drawer_primary_light"
        android:text="@string/add" />

</LinearLayout>