<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@color/white"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="8dp">

        <LinearLayout
            android:id="@+id/profile_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:contentDescription="@string/user_profile_picture"
                android:paddingBottom="15dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/profile_name"
                    android:layout_marginTop="55dp"
                    android:text="@string/logout"
                    android:textColor="@color/white" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/facebook_login_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_facebook_white_36dp"
                android:text="@string/sign_in_facebook"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/google_login_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_google_plus_white_36dp"
                android:text="@string/sign_in_google"
                android:textColor="@color/white" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>